# qml_catch2_console

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: android_macos.yml  cmake-multi-platform.yml  deploy.yml  linux.yml  webassembly.yml  windows.yml
src/: CMakeLists.txt  qml_catch2_console.cmake
src/qml_catch2_console/: StdBuffer.cpp  StdBuffer.h  console.qml  main.cpp
unittests/: CMakeLists.txt  main.cpp
